[package]
name = "acct"
version = "0.2.0"
authors = ["Josh Abraham <sinisterpatrician@gmail.com>"]
description = "Crate for reading data from acct(5) files"
license = "MIT/Apache-2.0"
repository = "https://github.com/jabedude/acct"
documentation = "https://docs.rs/acct/0.1.0/acct/"
keywords = ["acct", "unix", "process", "accounting", "pacct"]

[lib]
name = "acct"
path = "src/lib.rs"

[[bin]]
name = "acct"
path = "src/bin.rs"

[dependencies]
clap = "2.32.0"
bincode = "1.0.1"
serde = "1.0.79"
serde_derive = "1.0.79"
users = "0.8.0"
